# projeto-solar

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md  sample_inputs.csv
notebooks/: projeto_solar.ipynb
notebooks/.cache/: geo_Fortaleza__CE.json
src/: __init__.py  cli.py  config.py  engineering.py  finance.py  geodata.py  main.py  viz.py
tests/: test_engineering.py  test_finance.py
